--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.6.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
+
 
 
 dev_dependencies:
+  build_runner: ^2.4.7
+  hive_generator: ^2.0.1
   flutter_test:
     sdk: flutter
 
